--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "lint": "eslint src/ frontend/",
     "lint:fix": "eslint src/ frontend/ --fix",
     "format": "prettier --write \"src/**/*.{js,ts}\" \"frontend/**/*.{js,ts,html,css}\"",
-    "build": "npm run build:frontend && npm run build:worker",
-    "build:frontend": "cd frontend && npm run build",
-    "build:worker": "wrangler deploy --dry-run",
+    "build": "echo 'Static files ready for deployment'",
+    "build:frontend": "echo 'Frontend files are static HTML/CSS/JS'",
+    "build:worker": "echo 'Worker code is ready'",
     "setup": "node scripts/setup.js",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
@@ -74,16 +74,10 @@
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.6",
     "qrcode": "^1.5.3",
-    "barcode": "^0.1.4",
-    "exceljs": "^4.4.0",
-    "pdf-lib": "^1.17.1",
-    "canvas": "^2.11.2",
     "chart.js": "^4.4.0",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
-    "currency.js": "^2.0.4",
-    "philippine-address": "^1.0.0",
-    "philippine-tax": "^1.0.0"
+    "currency.js": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -96,8 +90,6 @@
     "@types/compression": "^1.7.5",
     "@types/multer": "^1.4.11",
     "@types/qrcode": "^1.5.5",
-    "@types/barcode": "^0.1.2",
-    "@types/canvas": "^2.11.0",
     "@types/moment": "^2.13.0",
     "@types/numeral": "^2.0.5",
     "typescript": "^5.3.0",
