--- a/package.json
+++ b/package.json
@@ -57,64 +57,65 @@
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
-    "wrangler": "^3.0.0",
-    "hono": "^3.12.0",
-    "zod": "^3.22.4",
+    "@hono/zod-validator": "^0.7.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.1",
-    "date-fns": "^2.30.0",
-    "luxon": "^3.4.4",
-    "lodash": "^4.17.21",
-    "validator": "^13.11.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6",
-    "qrcode": "^1.5.3",
     "chart.js": "^4.4.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "currency.js": "^2.0.4",
+    "date-fns": "^2.30.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "hono": "^3.12.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "numeral": "^2.0.6",
-    "currency.js": "^2.0.4"
+    "qrcode": "^1.5.3",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0",
+    "wrangler": "^3.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/uuid": "^9.0.7",
-    "@types/lodash": "^4.14.202",
-    "@types/validator": "^13.11.8",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/multer": "^1.4.11",
-    "@types/qrcode": "^1.5.5",
-    "@types/moment": "^2.13.0",
-    "@types/numeral": "^2.0.5",
-    "typescript": "^5.3.0",
-    "eslint": "^8.55.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.1.0",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.8",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.16",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "commitlint": "^18.4.3",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.202",
+    "@types/moment": "^2.13.0",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
+    "@types/numeral": "^2.0.5",
+    "@types/qrcode": "^1.5.5",
+    "@types/supertest": "^2.0.16",
+    "@types/uuid": "^9.0.7",
+    "@types/validator": "^13.11.8",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "commitlint": "^18.4.3",
+    "concurrently": "^8.2.2",
     "conventional-changelog-cli": "^4.1.0",
-    "rimraf": "^5.0.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.0",
     "nodemon": "^3.0.2",
-    "concurrently": "^8.2.2"
+    "prettier": "^3.1.0",
+    "rimraf": "^5.0.5",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -152,4 +153,4 @@
     "last 2 versions",
     "not dead"
   ]
-} 
+}
