--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "sharp": "^0.32.6",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
-    "wrangler": "^3.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -115,7 +114,8 @@
     "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "wrangler": "^4.27.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
