--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,31 +3,29 @@
 
 name = "wt-pos-payroll-saas"
 main = "src/worker.js"
-compatibility_date = "2024-01-01"
+compatibility_date = "2024-01-15"
 compatibility_flags = ["nodejs_compat"]
 
-# Environment variables
 [vars]
 ENVIRONMENT = "production"
-APP_NAME = "WT POS & Payroll SaaS"
-APP_VERSION = "1.0.0"
-SUPPORT_EMAIL = "support@wisetrackpos.com"
-COMPANY_NAME = "WiseTrack POS"
-COUNTRY = "PH"
-TIMEZONE = "Asia/Manila"
-CURRENCY = "PHP"
-LANGUAGE = "en"
-DEFAULT_LOCALE = "en-PH"
+COMPANY_NAME = "Your Company Name"
+JWT_EXPIRES_IN = "7d"
 
-# KV Namespace for caching and session storage
+[[d1_databases]]
+binding = "DB"
+database_name = "wt-pos-payroll-db"
+database_id = "your-database-id-here"
+
 [[kv_namespaces]]
 binding = "CACHE"
 id = "53480cdb256b4095ac269c95c8320104"
 
-# R2 Storage for file uploads (receipts, documents, etc.)
 [[r2_buckets]]
 binding = "STORAGE"
 bucket_name = "wt-pos-payroll-storage"
+
+[build]
+command = "npm run build"
 
 # Environment-specific configurations
 [env.development]
